src/styles/Card.css
.card {
    display: flex;
    height: 360px;
    border-radius: 6px;
    background-color: #000;
}

.card:hover {
    cursor: pointer;
}

.card-btn {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: end;
    border-radius: 6px;
    outline: none;
    border: none;
    font-family: var(--font-family);
    font-size: 1rem;
    background-position: top;
    background-size: cover;
    color: #fff;
    opacity: 0.8;
    transition: transform 0.1s ease-in-out, opacity 0.1s ease-out;
}
.card-btn:hover {
    cursor: pointer;
    opacity: 1;
    transform: scale(1.05);
}

.card-btn__info-container {
    width: 100%;
    min-height: 35%;
    display: flex;
    flex-direction: column;
    /* justify-content: ; */
    padding: 8px;
    border-radius: 0px 0px 6px 6px;
    background-color: rgba(33, 45, 42, 0.8);
    backdrop-filter: blur(8px);
    pointer-events: none;
}

.card-btn__primary-info {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: left;
    border-bottom: 1px solid #a49c91;
}

.card-btn__primary-info .card-btn__birth-year {
    font-style: italic;
}

.card-btn__secondary-info {
    margin-top: 4px;
    width: 100%;
    list-style: none;
    display: flex;
    flex-direction: column;
    text-align: left;
}

.card-btn__secondary-info li span {
    font-weight: 600;
}

